fix: Footer for the menu with light/dark mode toggle.
Move the light/dark mode into a menu footer.

Cleanup some of the styling with actions and disabled states.

--- a/src/sass/ui/_button.sass
+++ b/src/sass/ui/_button.sass
@@ -33,6 +33,7 @@
   cursor: pointer
   font-family: var(--font-family-default)
   font-size: $le-font-size
+  font-weight: 500
   line-height: $le-font-size
   padding: $le-space-small
   transition: opacity $le-speed-xslow
